unpackaged/main/default/objects/zkfedex__QueuedPackageSpecialServices__c/zkfedex__QueuedPackageSpecialServices__c.object-meta.xml
<CustomObject>
    <label>FedEx Queued Package Special Services</label>
    <nameField>
        <displayFormat>Queued-Package-SS-{00000000}</displayFormat>
        <label>Queued Package Special Services Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FedEx Queued Package Special Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>