unpackaged/main/default/objects/zkfedex__QueuedPackageSpecialServices__c/fields/zkfedex__DryIceWeight__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__DryIceWeight__c</fullName>
    <label>Dry Ice Weight</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>