unpackaged/main/default/objects/zkfedex__QueuedPackageSpecialServices__c/fields/zkfedex__IonInEquip__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__IonInEquip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ion in Equip</label>
    <type>Checkbox</type>
</CustomField>