unpackaged/main/default/objects/zkfedex__QueuedPackageSpecialServices__c/fields/zkfedex__IonWithEquip__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__IonWithEquip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ion w/ Equip</label>
    <type>Checkbox</type>
</CustomField>