unpackaged/main/default/objects/zkfedex__QueuedPackageSpecialServices__c/fields/zkfedex__MetalInEquip__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__MetalInEquip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Metal in Equip</label>
    <type>Checkbox</type>
</CustomField>