unpackaged/main/default/objects/zkfedex__QueuedPackageSpecialServices__c/fields/zkfedex__MetalWithEquip__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__MetalWithEquip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Metal w/ Equip</label>
    <type>Checkbox</type>
</CustomField>