unpackaged/main/default/objects/zkfedex__QueuedPackageSpecialServices__c/fields/zkfedex__NonStandardPackaging__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__NonStandardPackaging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non Standard Packaging</label>
    <type>Checkbox</type>
</CustomField>